--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ contact:
   contact_url: mailto:tobias.liaudat@cea.fr
 
 
-plugins:
-  - jekyll-target-blank
+# plugins:
+#   - jekyll-target-blank
 
 target-blank:
     rel: nofollow
 
 header_page_refs: ['about', 'CV', 'Publications', 'Miscellaneous']
-theme: jekyll-theme-cayman-blog
+# theme: jekyll-theme-cayman-blog
