--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Tobias Liaudat
-description: PhD student in Signal Processing and Machine Learning applied to Astrophysics at CEA Saclay.
+description: PhD student in Signal Processing and Machine Learning applied to Astrophysics.
 show_downloads: true
 
 # baseurl: "/tobias-liaudat" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
