--- a/_config.yml
+++ b/_config.yml
@@ -1,46 +1,84 @@
-title: Tobias Liaudat
-description: PhD student in Signal Processing and Machine Learning applied to Astrophysics.
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you: 
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+
+title: Tobias I. Liaudat
+email: tobiasliaudat@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  PhD student in Signal Processing and Machine Learning applied to Astrophysics.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+image_path: /assets/images
+docs_path: /assets/docs
+# github_username:  tobias-liaudat
 show_downloads: true
 
-# baseurl: "/tobias-liaudat" # change this to the subpath of your site, e.g. /blog. Leave it empty if you don't need it.
-# url: "https://tobias-liaudat.github.io" # change this to the base hostname & protocol for your site
-# url: "http://localhost:4000/tobias-liaudat"
-baseurl: ""
-url: ""
-image_path: /assets/images
-
-google_analytics: UA-163435936-1
-
-# cayman-blog date format
-# refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 cayman-blog:
   date_format: "%b %-d, %Y"
 
-theme: # leave it empty
-
-# social
-myname: Tobias Liaudat
-author: Tobias Liaudat
-twitter:
-  username:
-github:
-  owner_url: https://github.com/tobias-liaudat
-  owner_name: Tobias Liaudat
-linkedin:
-  owner_url: https://www.linkedin.com/in/tobias-liaudat/
-  owner_name: Tobias Liaudat
-googlescholar:
-  owner_url: https://scholar.google.com/citations?user=5YLM_sEAAAAJ&hl=en&oi=ao
-  owner_name: Tobias Liaudat
-contact:
-  contact_url: mailto:tobias.liaudat@cea.fr
-
-
+# Build settings
+# theme: minima
+theme: 
 plugins:
-  - jekyll-target-blank
+  - jekyll-feed
+  # - jekyll-target-blank
 
-target-blank:
-    rel: nofollow
+# target-blank:
+#   rel: nofollow
 
 header_page_refs: ['about', 'CV', 'Publications', 'Miscellaneous']
-# theme: jekyll-theme-cayman-blog
+
+# social
+myname: Tobias I. Liaudat
+author: Tobias I. Liaudat
+github:
+  owner_url: https://github.com/tobias-liaudat
+  owner_name: Tobias I. Liaudat
+linkedin:
+  owner_url: https://www.linkedin.com/in/tobias-liaudat/
+  owner_name: Tobias I. Liaudat
+googlescholar:
+  owner_url: https://scholar.google.com/citations?user=5YLM_sEAAAAJ&hl=en&oi=ao
+  owner_name: Tobias I. Liaudat
+twitter:
+  owner_url: https://twitter.com/tobias_liaudat
+  owner_name: Tobias I. Liaudat
+contact:
+  contact_url: mailto:tobiasliaudat@gmail.com
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
