--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@
 title: Tobias I. Liaudat
 email: tobiasliaudat@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  PhD student in Signal Processing and Machine Learning applied to Astrophysics.
+  Researching on inverse problems in imaging and machine learning with a physical flavour.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 image_path: /assets/images
