--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,158 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Tobías I. Liaudat
+    - name: Nationality
+      value: Argentinian
     - name: Languages
-      value: English, German
+      value: Spanish, English, French
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D. in Astrophysics
+      institution: Université Paris-Saclay, CEA Paris-Saclay, Gif-sur-Yvette, France
+      year: 2019-2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+        - "Title: Data-driven modelling of ground-based and space-based telescope's point spread functions."
+        - "Supervisors: Dr. Jean-Luc Starck & Dr. Martin Kilbinger"
 
-- title: Experience
+    - title: Master 2 research - Signal and image processing
+      institution: Université de Rennes I, Rennes, France
+      year: 2017-2018
+      description:
+        - "Ranked 1st of all Master students."
+
+    - title: IMT Atlantique's Engineering Diploma
+      institution: IMT Atlantique, Brest, France
+      year: 2016-2018
+      description:
+        - "Double Degree Agreement between IMT Atlantique and UBA thanks to an Eiffel excellence scholarship."
+
+    - title: Electronic Engineering diploma
+      institution: Universidad de Buenos Aires (UBA), Buenos Aires, Argentina
+      year: 2012-2019
+      description:
+        - "GPA: 9.23/10"
+        - "Gold Medal eligible."
+
+
+- title: Positions
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Postdoctoral Research Fellow in Artificial Intelligence for Imaging
+      institution: University College London, London, UK
+      year: 2022-now
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - "Advisors: Prof. Jason McEwen, Prof. Marcelo Pereyra, Prof. Marta Betcke."
+
+    - title: Research assistant
+      institution: ENSAE Paris, Paris Region, France
+      year: 2018-2019
       description:
-        - Description 1.
-        - Description 2.
+        - "Subject: Research assistant in topics around Optimal Transport."
+        - "Advisor: Prof. Marco Cuturi"
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Last year engineering internship
+      institution: CEA-Saclay, Paris Region, France
+      year: 2018
       description:
+        - "Master thesis: Signal processing and sparse blind source separation."
+        - "Advisor: Dr. Jérôme Bobin, Dr. Christophe Kervazo."
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Engineering internship
+      institution: Thales Air Systems, Paris Region, France
+      year: 2017
+      description:
+        - "Subject: Development of a radar performance simulator."
+        - "Advisor: Daniel Nguyen."
 
-- title: Open Source Projects
+
+- title: Teaching
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: Qualification section 61 CNU
+      institution: Section 61 CNU, France
+      year: 2023
+      description:
+        - "Qualification to be able to apply for professor positions in France's universities."
+        - "CNU section 61 corresponds to computer science, control engineering and signal processing."
+
+    - title: Teaching assistant at the Applied Mathematics department (32h)
+      institution: École Polytechnique, Palaiseau, Paris Region, France
+      year: 2021 - 2022
+      description:
+        - Optimisation and control MAP435 for 2nd year engineering cycle students.
+
+    - title: Teaching assistant at the Applied Mathematics department (64h)
+      institution: École Polytechnique, Palaiseau, Paris Region, France
+      year: 2020 - 2021
+      description:
+        - Statistics MAP433 for 2nd year engineering cycle students.
+        - Optimisation and control MAP435 for 2nd year engineering cycle students.
+        - Mathematical modelling MAA107 for 1st year bachelor students.
+        - Python projects MAP361P for 1st year engineering cycle students.
+
+
+- title: Supervision
+  type: time_table
+  contents:
+    - title: Ezequiel Centofanti - Master student (6m)
+      institution: CosmoStat Laboratory, CEA-Saclay, Paris region, France
+      year: 2022
+      description:
+        - "Subject: Improving the WaveDiff PSF estimation for Euclid."
+
+    - title: Aziz Ayed - Master student (5m)
+      institution: CosmoStat Laboratory, CEA-Saclay, Paris region, France
+      year: 2021
+      description:
+        - "Subject: Deep denoisers for the MCCD PSF model."
+
+    - title: Jérôme Bonnin - Master student (6m)
+      institution: CosmoStat Laboratory, CEA-Saclay, Paris region, France
+      year: 2019 - 2020
+      description:
+        - "Subject: RCA for CFIS and the MCCD PSF model."
+
+
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2017
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+        - Distinguished Student, Universidad de Buenos Aires (UBA).
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
+    - year: 2016
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - "Eiffel Excellence Scholarship"
+        - "Awarded to outstanding international students to do a double-degree in France"
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - year: 2011
+      items: 
+        - "Gold Medal Award, St. Luke's College, Argentina (High school)"
+        - "Delivered to the best student of the 2011 class."
+
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
+
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
