--- a/_config.yml
+++ b/_config.yml
@@ -172,10 +172,11 @@ collections:
     output: true
     permalink: /projects/:path/
 
-announcements:
-  enabled: true
-  scrollable: true # adds a vertical scroll bar if there are more than 3 news items
-  limit: 5 # leave blank to include all the news in the `_news` folder
+# News section in about page
+news_enabled: true
+news_apply_limit: true  # apply the news_limit, if false all the news are shown
+news_limit: 4  # number of news shown in the about page
+news_scrollable: true # adds a vertical scroll bar if there are more than 3 news items
 
 latest_posts:
   enabled: true
