add quantifai repo

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -6,4 +6,5 @@ github_repos:
   - CosmoStat/wf-psf
   - CosmoStat/shapepipe
   - astro-informatics/proxnest
+  - astro-informatics/QuantifAI
   - jbobin/dGMCA
