--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@ last_name: Liaudat
 email: tobiasliaudat@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Tobías I. Liaudat academic website.
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-keywords: machine learning, signal processing, point spread function, CEA  # add your own keywords or leave empty
+footer_text:
+keywords: machine learning, statistics, signal processing, point spread function, CEA  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
