--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -104,23 +104,27 @@
 - title: Supervision
   type: time_table
   contents:
-    - title: Ezequiel Centofanti - Master student (6m)
-      institution: CosmoStat Laboratory, CEA-Saclay, Paris region, France
+    - title: Mostafa Cherif - Master student
+      institution: IRFU, CEA-Saclay, France
+      year: 2024
+
+    - title: Ezequiel Centofanti - Master student
+      institution: CosmoStat Laboratory, CEA-Saclay, France
       year: 2022
-      description:
-        - "Subject: Improving the WaveDiff PSF estimation for Euclid."
+      # description:
+        # - "Subject: Improving the WaveDiff PSF estimation for Euclid."
 
-    - title: Aziz Ayed - Master student (5m)
-      institution: CosmoStat Laboratory, CEA-Saclay, Paris region, France
+    - title: Aziz Ayed - Master student
+      institution: CosmoStat Laboratory, CEA-Saclay, France
       year: 2021
-      description:
-        - "Subject: Deep denoisers for the MCCD PSF model."
+      # description:
+        # - "Subject: Deep denoisers for the MCCD PSF model."
 
-    - title: Jérôme Bonnin - Master student (6m)
-      institution: CosmoStat Laboratory, CEA-Saclay, Paris region, France
+    - title: Jérôme Bonnin - Master student
+      institution: CosmoStat Laboratory, CEA-Saclay, France
       year: 2019 - 2020
-      description:
-        - "Subject: RCA for CFIS and the MCCD PSF model."
+      # description:
+        # - "Subject: RCA for CFIS and the MCCD PSF model."
 
 
 # - title: Open Source Projects
